--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.heading{
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+    background-color:rgba(128, 128, 128, 0.353);
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.passvalue{
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+
+}
+.btn{
+    margin-left: 10px;
+    background-color: blue;
+    color:white;
+    height: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.inp{
+    width: 300px;
+}
+.lengthrange{
+    margin: 10px;
+    display: flex;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.mainparameter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box{
+    margin-left: 20px;
+    width: 15px;
+    height: 15px;
 }
